src/test/ui/issues/issue-46742-2.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/issue-46742-2.rs:10:23
   |
LL |     let result: i32 = foo(5, 5);
   |                       ^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
